add reponsive to task info

--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,23 +4,23 @@
     #welcome {
         margin-top: 12.5%;
     }
-    
+
     #welcome h1 {
         -webkit-text-stroke: 4px #663000;
     }
-    
+
     #about-us {
         background-size: 85%;
     }
-    
+
     #about-us-header {
         width: 85%;
     }
-    
+
     .team-card {
         flex-direction: column;
     }
-    
+
     .team-info {
         background-image: url("/assets/elements/lrg-board.svg");
         aspect-ratio: 1.29;
@@ -29,15 +29,15 @@
         justify-content: center;
         align-content: center;
     }
-    
+
     .team-img {
         width: 80vw;
     }
-    
+
     #timmy {
         flex-direction: column;
     }
-    
+
     #to-do {
         background-image: url("/assets/bg/to-do-bg.webp");
     }
@@ -77,7 +77,7 @@
     .msg-popup-head {
         padding-top: 24px;
     }
-    
+
     .option-menu-btns {
         gap: 12px;
         margin-top: -8px;
@@ -96,9 +96,14 @@
         margin-top: 60px !important;
     }
 
-    #user-greeting, #name-goes-here {
+    #user-greeting,
+    #name-goes-here {
         -webkit-text-stroke: 4px #663000;
     }
-        
+
+    .task-info {
+        background-repeat: no-repeat;
+        width: 100%;
+    }
+
 }
-    
