--- a/styles/style.css
+++ b/styles/style.css
@@ -130,6 +130,8 @@ h6 {
     border-radius: 20px 20px 0 0 !important;
     background-color: #f5E3a9;
     box-shadow: 2px 5px 1px #000;
+    overflow-y: auto;
+    max-height: 400px;
 }
 
 #chat-input-area {
@@ -138,6 +140,7 @@ h6 {
     background-color: #f5E3a9;
     border-radius: 0 0 20px 20px !important;
     box-shadow: 2px 5px 1px #000;
+    
 }
 
 #send-btn {
