--- a/styles/assets.css
+++ b/styles/assets.css
@@ -108,7 +108,7 @@
     border: none;
     background-color: transparent;
     aspect-ratio: 1;
-    width: clamp(60px, 10vw, 72px);
+    width: clamp(44px, 8vw, 56px);
     background-image: url('/assets/SVG/add-button.svg');
     background-repeat: no-repeat;
     background-size: contain;
@@ -181,7 +181,6 @@
     color: #fff;
     font-family: 'giulia-plain';
     font-weight: 500;
-    font-size: clamp(28px, 5vw, 40px);
     text-shadow: 2.5px 2.5px rgba(0, 0, 0, .20);
 }
 
@@ -456,38 +455,46 @@
 }
 
 .task-card {
-    aspect-ratio: 2.53;
+    aspect-ratio: 3.22;
+    width: clamp(320px, 100vw, 520px);
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 100%;
-    max-width: 380px;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     background-image: url('/assets/SVG/task-content.svg');
     background-position: center center;
     background-repeat: no-repeat;
     background-size: contain;
+    padding-top: 6px;
+    gap: 4px;
 }
 
-.task-card h4 {
-    height: 30%;
+.course-name {
     width: 100%;
     text-align: center;
+    color: #fff;
+    text-shadow: 2.5px 2.5px rgba(0, 0, 0, .20);
 }
 
-.task-card h5 {
-    width: 70%;
+
+.task-title {
+    font-family: 'museo-sans';
+    font-weight: 600;
+    color: #fff;
+    text-shadow: 1.5px 1.5px rgba(0, 0, 0, .20);
+    font-size: clamp(18px, 2vw, 24px);
+    line-height: 1.3;
+    letter-spacing: -0.5px;
     text-align: center;
-    padding: 0 2% 8% 7%;
 }
 
-.task-card .add-btn-box {
-    width: 30%;
-    height: 70%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-bottom: 12.5%;
-    margin-left: -1.5%;
+.task-card #add-to-list {
+    width: clamp(150px, 30vw, 180px) !important;
+    font-size: clamp(20px, 4vw, 24px);
+    transition: transform 200ms linear; /* Sets parameters for hover animations */
 }
+
+.task-card #add-to-list:hover {
+    transform: scale(1.15);
+}
+
