--- a/styles/assets.css
+++ b/styles/assets.css
@@ -466,10 +466,12 @@
     background-repeat: no-repeat;
     background-size: contain;
     padding-top: 6px;
-    gap: 4px;
+    margin-bottom: 24px;
 }
 
 .course-name {
+    height: 100%;
+    min-height: 40px;
     width: 100%;
     text-align: center;
     color: #fff;
@@ -478,14 +480,22 @@
 
 
 .task-title {
+    height: 100%;
     font-family: 'museo-sans';
     font-weight: 600;
     color: #fff;
-    text-shadow: 1.5px 1.5px rgba(0, 0, 0, .20);
-    font-size: clamp(18px, 2vw, 24px);
+    text-shadow: 2.5px 2.5px rgba(0, 0, 0, .20);
+    font-size: clamp(20px, 2vw, 28px);
     line-height: 1.3;
     letter-spacing: -0.5px;
     text-align: center;
+    position: relative;
+    top: 20px;
+}
+
+.task-card .add-btn-box {
+    position: relative;
+    top: 44px;
 }
 
 .task-card #add-to-list {
