--- a/styles/style.css
+++ b/styles/style.css
@@ -90,105 +90,6 @@ h6 {
     -webkit-text-stroke: 6px #663000;
 }
 
-#task-list {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 12px;
-    justify-content: center;
-}
-
-#group-task-content {
-    flex-direction: row;
-    gap: 20px;
-    width: 100%;
-    justify-content: center;
-    padding-bottom: 100px;
-}
-
-#group-task-creation {
-    width: 100%;
-    max-width: 310px;
-    gap: 20px;
-}
-
-#group-task-creation form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 0px;
-}
-
-#group-task-submit-btn {
-    width: 150px;
-    font-size: clamp(20px, 3.5vw, 28px);
-    margin-top: 20px;
-}
-
-
-#chat-container {
-    width: 100%;
-}
-
-#chat-display {
-    border: 6px solid white !important;
-    border-bottom: none !important;
-    border-radius: 20px 20px 0 0 !important;
-    background-color: #f5E3a9;
-    box-shadow: 2px 5px 1px #000;
-    overflow-y: auto;
-    max-height: 400px;
-}
-
-#chat-input-area {
-    border: 6px solid white !important;
-    border-top: none !important;
-    background-color: #f5E3a9;
-    border-radius: 0 0 20px 20px !important;
-    box-shadow: 2px 5px 1px #000;
-    
-}
-
-#send-btn {
-    font-size: clamp(20px, 3.5vw, 24px) !important;
-    width: 160px;
-}
-
-#user-greeting,
-#name-goes-here {
-    font-size: clamp(60px, 15vw, 110px) !important;
-    font-weight: 900;
-    letter-spacing: -0.25vw;
-    font-family: 'giulia-plain' !important;
-    -webkit-text-stroke: 6px #663000;
-    color: #FAF9DA;
-    border-bottom: none;
-}
-
-#user-greeting1 {
-    font-size: 36px !important;
-    font-weight: 900;
-    /* letter-spacing: -0.15vw;     */
-    font-family: 'giulia-plain' !important;
-    -webkit-text-stroke: 1px #663000;
-    color: #FAF9DA;
-    border-bottom: none;
-
-}
-
-#user-greeting2 {
-    font-size: clamp(18px, 5vw, 32px) !important;
-    font-weight: 900;
-    font-family: 'giulia-plain' !important;
-    -webkit-text-stroke: 2px #663000;
-    color: #FAF9DA;
-    border-bottom: none;
-    min-width: 200px;
-
-}
-
 #main-content #bear-buddy {
     width: 40%;
     min-width: 150px;
@@ -257,12 +158,67 @@ h6 {
 }
 
 /* Group page */
-#groups-menu-home {
-    background-image: url("/assets/bg/BCIT-exterior.webp");
+
+#chat-container {
+    width: 72.5%;
 }
 
-#groups-menu {
-    margin-top: 3.5%;
+#chat-display {
+    border: 6px solid white !important;
+    border-bottom: none !important;
+    border-radius: 20px 20px 0 0 !important;
+    background-color: #f5E3a9;
+    box-shadow: 2px 5px 1px #000;
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+#chat-input-area {
+    border: 6px solid white !important;
+    border-top: none !important;
+    background-color: #f5E3a9;
+    border-radius: 0 0 20px 20px !important;
+    box-shadow: 2px 5px 1px #000; 
+}
+
+#group-inputs {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#group-task-creation {
+    width: 25%;
+}
+
+#group-task-creation form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 0px;
+}
+
+#group-task-submit-btn {
+    width: 150px;
+    font-size: clamp(20px, 3.5vw, 28px);
+    margin-top: 20px;
+}
+
+#send-btn {
+    font-size: clamp(20px, 3.5vw, 24px) !important;
+    width: 160px;
+}
+
+
+#task-list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    overflow-x: scroll;
+    gap: 12px;
+    justify-content: center;
 }
 
 
@@ -355,7 +311,7 @@ h6 {
     color: #003654;
 }
 
-/*group-single-task*/
+/* Groups Page */
 
 #task-frame {
     background-image: url("/assets/bg/classroom-01.png");
@@ -397,10 +353,6 @@ h6 {
     min-width: 350px;
     margin-bottom: 0 !important;
 }
-
-/* .task-info .mb-5 {
-    margin-top: ;
-} */
 
 /* Task List */
 #task-container {
