--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -59,7 +59,7 @@
     }
 
     #group-inputs {
-        flex-direction: column-reverse;
+        flex-direction: column;
     }
 
     #group-task-creation {
@@ -96,7 +96,7 @@
     }
 
     #task-list {
-        max-height: 60vh;
+        max-height: 100vh;
         overflow-x: auto;
         overflow-y: scroll;
         flex-direction: column;
