--- a/styles/style.css
+++ b/styles/style.css
@@ -158,69 +158,13 @@ h6 {
 }
 
 /* Group page */
-
-#chat-container {
-    width: 72.5%;
+#groups-menu-home {
+    background-image: url("/assets/bg/BCIT-exterior.webp");
 }
 
-#chat-display {
-    border: 6px solid white !important;
-    border-bottom: none !important;
-    border-radius: 20px 20px 0 0 !important;
-    background-color: #f5E3a9;
-    box-shadow: 2px 5px 1px #000;
-    overflow-y: auto;
-    max-height: 400px;
+#groups-menu {
+    margin-top: 3.5%;
 }
-
-#chat-input-area {
-    border: 6px solid white !important;
-    border-top: none !important;
-    background-color: #f5E3a9;
-    border-radius: 0 0 20px 20px !important;
-    box-shadow: 2px 5px 1px #000; 
-}
-
-#group-inputs {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#group-task-creation {
-    width: 25%;
-}
-
-#group-task-creation form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
-    gap: 0px;
-}
-
-#group-task-submit-btn {
-    width: 150px;
-    font-size: clamp(20px, 3.5vw, 28px);
-    margin-top: 20px;
-}
-
-#send-btn {
-    font-size: clamp(20px, 3.5vw, 24px) !important;
-    width: 160px;
-}
-
-
-#task-list {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    overflow-x: scroll;
-    gap: 12px;
-    justify-content: center;
-}
-
 
 /* About Us Page Styling */
 #about-us, #prepopulated-tasks {
@@ -313,39 +257,66 @@ h6 {
 
 /* Groups Page */
 
-#task-frame {
-    background-image: url("/assets/bg/classroom-01.png");
-    background-position: center center;
-    background-size: cover;
-    background-repeat: none;
-    align-items: center;
-    justify-content: center;
+#chat-container {
+    width: 100%;
 }
 
-.task-info {
-    aspect-ratio: 1.24;
-    background-image: url("/assets/SVG/input\ board\ lrg.svg");
-    background-repeat: none;
-    position: fixed;
-    z-index: 999;
+#chat-display {
+    border: 6px solid white !important;
+    border-bottom: none !important;
+    border-radius: 20px 20px 0 0 !important;
+    background-color: #f5E3a9;
+    box-shadow: 2px 5px 1px #000;
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+#chat-input-area {
+    border: 6px solid white !important;
+    border-top: none !important;
+    background-color: #f5E3a9;
+    border-radius: 0 0 20px 20px !important;
+    box-shadow: 2px 5px 1px #000;
+    
+}
+
+#group-inputs {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+}
+
+#group-task-content {
+    flex-direction: row;
+    gap: 20px;
+    width: 100%;
     justify-content: center;
-    top: 25%;
-    width: 60%;
-    padding: 0 32px;
+    padding-bottom: 100px;
+}
+
+#group-task-creation {
+    width: 100%;
+    max-width: 310px;
+    gap: 20px;
+}
+
+#group-task-creation form {
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
+    gap: 0px;
 }
 
-.task-info h1 {
-    font-size: clamp(20px, 4vw, 36px);
-    letter-spacing: -2px;
-    color: #fff;
-    padding-top: 1%;
-    margin-bottom: 24px;
-    -webkit-text-stroke: 1px #82C822;
-    text-shadow: 3px 3px rgba(0, 0, 0, .20);
+#group-task-submit-btn {
+    width: 150px;
+    font-size: clamp(20px, 3.5vw, 28px);
+    margin-top: 20px;
+}
+
+#send-btn {
+    font-size: clamp(20px, 3.5vw, 24px) !important;
+    width: 160px;
 }
 
 #taskInfoFields {
@@ -353,6 +324,17 @@ h6 {
     min-width: 350px;
     margin-bottom: 0 !important;
 }
+
+#task-list {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 12px;
+    justify-content: center;
+}
+
+
 
 /* Task List */
 #task-container {
