--- a/styles/style.css
+++ b/styles/style.css
@@ -270,20 +270,30 @@ h6 {
     box-shadow: 2px 5px 1px #000;
     overflow-y: auto;
     min-height: 360px;
+    padding: 12px;
+}
+
+#chat-input {
+    width: calc(100% - 180px);
+    padding: 8px;
+    border-radius: 6px;
 }
 
 #chat-input-area {
+    width: 100%;
     border: 6px solid white !important;
     border-top: none !important;
     background-color: #f5E3a9;
     border-radius: 0 0 20px 20px !important;
     box-shadow: 2px 5px 1px #000;
+    padding: 12px;
 }
 
 #group-inputs {
     display: flex;
     flex-direction: row;
     width: 100%;
+    padding-bottom: 100px;
 }
 
 #group-task-content {
