--- a/styles/style.css
+++ b/styles/style.css
@@ -364,6 +364,40 @@ h6 {
 
 /* User Profile */
 
+#copy-to-clipboard {
+    width: 30%;
+}
+
+#edit-profile-CTA {
+    width: 180px;
+    float: right;
+}
+
+#friendCode {
+    height: 44px;
+    border: none;
+    background-color: transparent;
+    width: 70%;
+    color: #fff;
+    text-shadow: 1px 1px #00000080;
+}
+
+#friend-code-container {
+    width: 50%;
+}
+
+#friend-code-input {
+    background-image: url('/assets/SVG/input-field.svg');
+    background-repeat: no-repeat;
+    aspect-ratio: 4.46;
+    display: flex;
+    flex-direction: row;
+    padding: 0 6% 3% 8%;
+    justify-content: space-between;
+    align-items: center;
+    width: clamp(200px, 25vw, 380px)
+}
+
 #friends-list {
     display: flex;
     flex-direction: row;
@@ -372,11 +406,12 @@ h6 {
     gap: 32px;
 }
 
+
 #user-card {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: space-around;
 }
 
 #user-card h1 {
@@ -393,7 +428,7 @@ h6 {
 }
 
 #user-photo-streak {
-    width: 50%;
+    width: 45%;
 }
 
 #user-profile-info {
@@ -405,7 +440,7 @@ h6 {
 }
 
 #user-settings-info {
-    width: 50%;
+    width: 60%;
 }
 
 #user-stats {
