--- a/styles/assets.css
+++ b/styles/assets.css
@@ -317,6 +317,15 @@
     background-size: cover;
 }
 
+.course-name {
+    height: 100%;
+    min-height: 40px;
+    width: 100%;
+    text-align: center;
+    color: #fff;
+    text-shadow: 2.5px 2.5px rgba(0, 0, 0, .20);
+}
+
 .friend-box {
     aspect-ratio: .967;
     width: 30%;
@@ -341,7 +350,7 @@
 }
 
 .friend-box-buttons button {
-    width: clamp(40px, 8vw, 50px);
+    width: 50px;
 }
 
 .friend-box h3 {
@@ -395,6 +404,11 @@
 
 .mt-2 {
     margin-top: 8px;
+}
+
+.mt-5 {
+    margin-top: 0 !important;
+    padding-bottom: 70px;
 }
 
 .main-content {
@@ -493,12 +507,11 @@
 
 .option-menu-head {
     font-size: clamp(36px, 5.8vw, 44px);
-    letter-spacing: -3.5px;
-    position: relative;
-    top: .5%;
     color: #fff;
     -webkit-text-stroke: 1px #82C822;
     text-shadow: 3px 3px rgba(0, 0, 0, .20);
+    padding-top: 2.5px;
+    letter-spacing: -1%;
 }
 
 .option-menu-btns {
@@ -560,16 +573,6 @@
     margin-bottom: 24px;
 }
 
-.course-name {
-    height: 100%;
-    min-height: 40px;
-    width: 100%;
-    text-align: center;
-    color: #fff;
-    text-shadow: 2.5px 2.5px rgba(0, 0, 0, .20);
-}
-
-
 .task-title {
     height: 100%;
     font-family: 'museo-sans';
@@ -615,4 +618,22 @@
     background-size: contain;
     aspect-ratio: 1;
     padding: 8%;
+}
+
+.user-settings-info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    width: 50%;
+    gap: 8px;
+}
+
+.user-settings-info p {
+    font-weight: 500 !important;
+    font-size: 14px;
+}
+
+.user-settings-info span {
+    font-family: 'giulia-plain' !important;
+    font-size: 20px;
 }
