--- a/styles/style.css
+++ b/styles/style.css
@@ -255,12 +255,28 @@ h6 {
     color: #003654;
 }
 
+/* Awards Page */
+
+#awards-page {
+    background-color: #005188;
+}
+
 /* Personal Task List*/
 
 #personal-task-page {
     background-image: url("/assets/bg/tech\ classroom.svg");
     background-position: center center;
     min-height: 200vh;
+}
+
+#my-to-do-list #task-container {
+    max-height: 50vh;
+    overflow-y: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: #6496C8;
+    border: none;
 }
 
 #to-do-list-avatars {
@@ -277,7 +293,7 @@ h6 {
     max-width: 1000px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     position: absolute;
     top: 0px;
 }
