--- a/styles/assets.css
+++ b/styles/assets.css
@@ -549,6 +549,23 @@
     font-family: 'giulia-plain';
 }
 
+.my-task-controls {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 20px;
+}
+
+.my-task-controls button {
+    font-size: clamp();
+    width: 120px;
+    font-size: 22px;
+}
+
+.my-tasks-container {
+    padding-right: 8px;
+}
+
 .option-menu {
     aspect-ratio: .583;
     display: flex;
@@ -672,6 +689,10 @@
 
 .to-do-list-task {
     width: 330px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #f5e3a9;
 }
 
 .user-card {
