--- a/styles/assets.css
+++ b/styles/assets.css
@@ -693,6 +693,12 @@
     flex-direction: column;
     align-items: center;
     background-color: #f5e3a9;
+    padding: 16px;
+    border-radius: 32px;
+    border: 8px solid white;
+    color: #222;
+    text-shadow: 1px 1px #ffffffC9;
+    box-shadow: 1px 4px 1px #00000080;
 }
 
 .user-card {
