--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -42,6 +42,16 @@
         row-gap: 24px !important;
     }
 
+    #chat-container .heading-banner {
+        top: 40px;
+        padding-top: 5px;
+        width: 80%;
+    }
+
+    #chat-display {
+        padding-top: 40px;
+    }
+
     .friend-box {
         width: 80%;
     }
