--- a/styles/style.css
+++ b/styles/style.css
@@ -372,6 +372,22 @@ h6 {
     padding-bottom: 100px;
 }
 
+#groups-intro span, #groups-intro h1, #task-list-container h2 {
+    font-family: 'giulia';
+    font-weight: 400;
+    -webkit-text-stroke-color: #FFC24C;
+    text-align: center;
+}
+
+#groups-intro span, #groups-intro h1 {
+    font-size: 60px;
+}
+
+#task-list-container h2 {
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
 #groups-page {
     background-color: #005188;
 }
@@ -389,6 +405,17 @@ h6 {
 
 #group-cta-btns {
     visibility: hidden;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 20px;
+    padding-bottom: 32px;
+}
+
+#group-cta-btns button {
+    width: 120px;
+    font-size: 20px;
 }
 
 #group-task-content {
